--- a/experience/index.html
+++ b/experience/index.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="/src/styles.css">
-    <link rel="stylesheet" href="/src/lanyard.css">
-    <script src="/src/general.js" async></script>
-    <script src="/src/lanyard.js" async></script>
+    <link rel="stylesheet" href="/src/css/styles.css">
+    <link rel="stylesheet" href="/src/css/lanyard.css">
+    <script src="/src/js/general.js" async></script>
+    <script src="/src/js/lanyard.js" async></script>
     <script defer="" src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js"
         crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -96,7 +96,7 @@
                 <p class="feature-content">At MiniFinder, I provide support to customers over email, phone or chat. I assist customers when their GPS tracker experiences issues and provide world-class support for a growing IoT company.</p>
             </div>
             <div class="screenshot-container">
-                <img class="Screenshot" src="/images/minifinder.jpg">
+                <img class="Screenshot" src="/assets/uploads/images/minifinder.jpg">
                 <div class="linkCompany">
                     <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -114,7 +114,7 @@
                 <p class="feature-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
             </div>
             <div class="screenshot-container">
-                <img class="Screenshot" src="/images/tingsryd.png">
+                <img class="Screenshot" src="/assets/uploads/images/tingsryd.png">
                 <div class="linkCompany">
                     <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a title="Tingsryds municipality - LinkedIn" href="https://www.linkedin.com/company/tingsryds-kommun/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -132,7 +132,7 @@
                 <p class="feature-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
             </div>
             <div class="screenshot-container">
-                <img class="Screenshot" src="/images/itcare.jpg">
+                <img class="Screenshot" src="/assets/uploads/images/itcare.jpg">
                 <div class="linkCompany">
                     <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a title="IT Care Repairstore - LinkedIn" href="https://www.linkedin.com/company/it-care-repairstore/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -159,7 +159,7 @@
                 <p class="feature-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
             </div>
             <div class="screenshot-container">
-                <img class="Screenshot" src="/images/vaxjo.png">
+                <img class="Screenshot" src="/assets/uploads/images/vaxjo.png">
                 <div class="linkCompany">
                     <a title="teknikum.se" href="https://teknikum.se"><i class="fa-solid fa-link"></i>
                 </div>
