--- a/experience/index.html
+++ b/experience/index.html
@@ -153,7 +153,7 @@
                 <h2 class="feature-title">Computer and Networking Technology</h2>
                 <ul class="specs">
                     <li><i class="fa-solid fa-building"></i>Teknikum</li>
-                    <li><i class="fa-solid fa-location-dot"></i>Tingsryd, Sweden</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
                     <li><i class="fa-solid fa-clock"></i>August 2020 - June 2023</li>
                 </ul>
                 <p class="feature-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
