--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div id="app-info">
             <img src="/assets/uploads/images/image.png" alt="A selfie where I'm standing in a white t-shirt in front of a tree" class="app-icon">
             <div>
-                <h1 class="app-name">actuallyaridan</h1>
-                <p class="app-description titleColor">the username for Adnan Bukvic, a swedish <span id="techEnthu">tech
+                <h1 class="app-name">Adnan Bukvic</h1>
+                <p class="app-description titleColor">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
                 <p id="statusWrapper" class="dcloading">Loading</p>
@@ -106,16 +106,6 @@
                     </div>
                     <div id="loadedLanyard">
                         <div id="discord">
-                            <div id="discordInfo" class="discordInfo">
-                                <span class="titleActivity"> <i class="fa-brands fa-discord">
-                                        <h3>Discord</h3>
-                                    </i></i>
-                                </span>
-                                <img id="discordPFP" class="discordPFP" draggable="false" width="128" height="128"
-                                    alt="" src="src/images/icons/spinner.gif">
-                                <p id="discordNameUser" class="titleColor">aridan</p>
-                                <p id="discordName" class="subtitleColor">Loading</p>
-                            </div>
                             <!-- Apple Music Activity -->
                             <div id="amLanyardDiscord">
                                 <span class="titleActivity">
@@ -182,8 +172,7 @@
         <hr>
         <div class="feature">
             <div>
-                <h2 class="feature-title">Actuallyari...who?</h2>
-                <p class="feature-content">I'm Adnan, also known as actuallyaridan or simply aridan. I'm a creative guy
+                <p class="feature-content">I'm Adnan. I'm a creative guy
                     that loves making new solutions to old things. I love learning new things and I've liked computers,
                     phones and networking ever since I was a child. I'm always up-to-date about their software and
                     hardware. I even like modifying electronics to do new things like replacing the hard drive in iPods
@@ -200,7 +189,6 @@
 
         <div class="feature">
             <div>
-                <h2 class="feature-title">I have a PC</h2>
                 <p class="feature-content">I've fully built it myself. It runs games quite well and it dual-boots
                     Windows 11 and macOS. Yes, it's indeed a hackintosh! It was a bit tideisous to get it running the
                     first time, but it runs well!</p>
@@ -221,7 +209,6 @@
 
         <div class="feature">
             <div>
-                <h2 class="feature-title">I collect vintage Apple products</h2>
                 <p class="feature-content">I enjoy collecting, repairing, and modifying vintage Apple products, like iPods. I open them, repair them if needed and then modify them with larger batteries, replace the internal spinning hard drive with an SD card and also flash custom firmware on them! It's a really fun hobby and being able to tinker with them is really calming.</p>
                 <p class="feature-content">I currently have a...</p>
                 <ul class="specs">
@@ -237,33 +224,7 @@
             </div>
         </div>
     </main>
-    <section>
-        <div class="section-header">
-            <h1 class="app-name">Fun fact!</h1>
-        </div>
-        <div class="cta">
-            <div>
-                <h2>I have quite bad vision</h2>
-                <p class="feature-content">Nystagmus, two-eyed-monocular vision, hypertropia, hypotropia and myopia.</p>
-                <p class="feature-content">Yep, that's all the things wrong with my eyes! My eyes like to dance, hate
-                    each other, aren't level and can't see clearly far away without glasses.</p>
-                <p class="feature-content">My brain has learned to deal with it better, and with glasses I can see quite clearly. Crazy how much the brain can adjust itself, eh?</p>
-            </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" alt="A black and white animated photo of an eye with nystagmus, jittering horizontally." title="Nystagmus is a condition where the eyes move involuntarily, usually in a horizontal direction."
-                    src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Optokinetic_nystagmus.gif">
-            </div>
-        </div>
-    </section>
     <footer>
-        <div class="sosumi">
-            <p class="subtitleColor">Any copyrighted material (like application icons, album arts or similar) displayed
-                on this website is owned by their respective copyright holder.
-                Some images on this website are embedded from other websites.</p>
-            <p class="subtitleColor">
-                Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.
-            </p>
-        </div>
     </footer>
     <dialog style="display: none;" id="settingsDialog">
         <div class="modal">
