--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
         <div class="feature">
             <div>
-                <p class="feature-content">I have a computer that runs both Windows and macOS - it's a hackinntosh. It runs the latest version of macOS great, with graphic acceleration, WiFi and Bluetooth. It works great, hoever, due to my graphics card being incompatible with macOS, DRM content, like Netflix, doesn't play in Safari, but does work properly in other browsers. <br>Here are the specs of it if you'd like to build something similar:</p>
+                <p class="feature-content">I have a computer that runs both Windows and macOS - it's a hackinntosh. It runs the latest version of macOS great, with graphic acceleration, WiFi and Bluetooth. It works great, however, due to my graphics card being incompatible with macOS, DRM content, like Netflix, doesn't play in Safari, but does work properly in other browsers. <br>Here are the specs of it if you'd like to build something similar:</p>
                 <ul class="specs">
                     <li><i class="fa-solid fa-microchip"></i>AMD Ryzen 5 3600</li>
                     <li><i class="fa-solid fa-gamepad"></i>Radeon RX 6700 XT</li>
