--- a/index.html
+++ b/index.html
@@ -281,6 +281,31 @@
                 </div>
             </div>
     </dialog>
+    <script> 
+        document.addEventListener("DOMContentLoaded", function () {
+    const spans = Array.from(document.querySelectorAll(".app-description span"));
+    let currentIndex = 0;
+    let shuffledSpans = [];
+
+    function shuffleArray(array) {
+        return array.sort(() => Math.random() - 0.5);
+    }
+
+    function swapSpans() {
+        if (currentIndex === 0) {
+            shuffledSpans = shuffleArray([...spans]); // Shuffle when restarting cycle
+        }
+        spans.forEach(span => (span.style.display = "none"));
+        shuffledSpans[currentIndex].style.display = "inline";
+        currentIndex = (currentIndex + 1) % spans.length;
+    }
+
+    // Initialize first span and start interval
+    swapSpans();
+    setInterval(swapSpans, 2000);
+});
+
+    </script>
 </body>
 
 </html>
