--- a/404.html
+++ b/404.html
@@ -75,12 +75,12 @@
     </header>
 
     <main class="container">
-        <div id="app-info">
-            <p class="app-icon">😵‍💫</p>
+        <div id="info">
+            <p class="icon">😵‍💫</p>
             <div>
-                <h1 class="app-name">404 - Not Found</h1>
-                <p class="app-description titleColor">Whatever you were looking for, it's not here.</p>
-                <p class="app-description titleColor">That's all we know.</p>
+                <h1 class="name">404 - Not Found</h1>
+                <p class="description titleColor">Whatever you were looking for, it's not here.</p>
+                <p class="description titleColor">That's all we know.</p>
                 <a href="/" class="button">Go back home</a>
             </div>
         </div>
