--- a/contact/index.html
+++ b/contact/index.html
@@ -75,15 +75,21 @@
     </header>
 
     <main class="container">
-        <div id="app-info">
-            <p class="app-icon"><i class="fa-solid fa-address-book icon-background"></i></p>
+        <div id="info">
+            <p class="icon"><i class="fa-solid fa-address-book icon-background"></i></p>
             <div>
-                <h1 class="app-name">Get in touch</h1>
+                <h1 class="name">Get in touch</h1>
             </div>
         </div>
         <hr>
-        <div class="contact">
-
+        <div class="section">
+            <div>
+                <h2 class="section-title">Can we build it? ...maybe</h2>
+                <p class="section-content">This website under construction.</p>
+            </div>
+            <div class="photo-container">
+                <p class="photo noBack">🏗️</p>
+            </div>
         </div>
     </main>
     <footer>
