--- a/experience/index.html
+++ b/experience/index.html
@@ -75,64 +75,64 @@
     </header>
 
     <main class="container">
-        <div id="app-info">
-            <p class="app-icon"><i class="fa-solid fa-briefcase icon-background"></i></p>
+        <div id="info">
+            <p class="icon"><i class="fa-solid fa-briefcase icon-background"></i></p>
             <div>
-                <h1 class="app-name">Career</h1>
-                <p class="app-description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
+                <h1 class="name">Career</h1>
+                <p class="description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
                 <a class="button" href="mailto:adnan@aridan.net"><i class="fa-solid fa-envelope"></i>Get in touch</a>
             </div>
         </div>
         <hr>
-        <div class="feature">
+        <div class="section">
             <div>
-                <h2 class="feature-title">Support technician</h2>
+                <h2 class="section-title">Customer Service Agent</h2>
                 <ul class="specs">
                     <li><i class="fa-solid fa-building"></i>MiniFinder Sweden AB</li>
                     <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
 
                     <li><i class="fa-solid fa-clock"></i>February 2025 - Present</li>
                 </ul>
-                <p class="feature-content">At MiniFinder, I provide support to customers over email, phone or chat. I assist customers when their GPS tracker experiences issues and provide world-class support for a growing IoT company.</p>
+                <p class="section-content">At MiniFinder, I provide support over email, phone or chat, assisting customers when their GPS tracker experiences issues.</p>
             </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/assets/uploads/images/minifinder.jpg">
+            <div class="photo-container">
+                <img class="photo" src="/assets/uploads/images/minifinder.jpg">
                 <div class="linkCompany">
                     <a title="minifinder.com" href="https://minifinder.com"><i class="fa-solid fa-link"></i></a><a title="MiniFinder - LinkedIn" href="https://www.linkedin.com/company/minifinder/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
-        <div class="feature">
+        <div class="section">
             <div>
-                <h2 class="feature-title">IT technician</h2>
+                <h2 class="section-title">IT technician</h2>
                 <ul class="specs">
                     <li><i class="fa-solid fa-building"></i>Tingsryds municipality</li>
                     <li><i class="fa-solid fa-location-dot"></i>Tingsryd, Sweden</li>
 
                     <li><i class="fa-solid fa-clock"></i>September 2024 - February 2025</li>
                 </ul>
-                <p class="feature-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
+                <p class="section-content">As an IT technician at Tingsryds municipality, I provided IT-based support for various end-users across the municipality. I also deployed computers, and rolled in mobile phones and tablets to Microsoft Intune.</p>
             </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/assets/uploads/images/tingsryd.png">
+            <div class="photo-container">
+                <img class="photo" src="/assets/uploads/images/tingsryd.png">
                 <div class="linkCompany">
                     <a title="tingsryd.se" href="https://tingsryd.se"><i class="fa-solid fa-link"></i></a><a title="Tingsryds municipality - LinkedIn" href="https://www.linkedin.com/company/tingsryds-kommun/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
-        <div class="feature">
+        <div class="section">
             <div>
-                <h2 class="feature-title">Technician and Web developer</h2>
+                <h2 class="section-title">Technician and Web developer</h2>
                 <ul class="specs">
                     <li><i class="fa-solid fa-building"></i>IT Care Repairstore</li>
                     <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
 
                     <li><i class="fa-solid fa-clock"></i>November 2022 - October 2023</li>
                 </ul>
-                <p class="feature-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
+                <p class="section-content">In my role at IT Care Repairstore, I received, diagnosed, repaired, and returned customers computers, mobile phones and tablets. I was also responsible for keeping the website working and up-to-date.</p>
             </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/assets/uploads/images/itcare.jpg">
+            <div class="photo-container">
+                <img class="photo" src="/assets/uploads/images/itcare.jpg">
                 <div class="linkCompany">
                     <a title="itcarestore.se" href="https://itcarestore.se"><i class="fa-solid fa-link"></i></a><a title="IT Care Repairstore - LinkedIn" href="https://www.linkedin.com/company/it-care-repairstore/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
@@ -140,26 +140,26 @@
         </div>
 
         <hr>
-        <div id="app-info">
-            <p class="app-icon"><i class="fa-solid fa-graduation-cap icon-background"></i></i></p>
+        <div id="info">
+            <p class="icon"><i class="fa-solid fa-graduation-cap icon-background"></i></i></p>
             <div>
-                <h1 class="app-name">Education</h1>
-                <p class="app-description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
+                <h1 class="name">Education</h1>
+                <p class="description titleColor">I've had various jobs at a few companies. I've worked in tech repair, IT support for a municipality, and general support for an IoT company, and I'm only getting started!</p>
             </div>
         </div>
         <hr>
-        <div class="feature">
+        <div class="section">
             <div>
-                <h2 class="feature-title">Computer and Networking Technology</h2>
+                <h2 class="section-title">Computer and Networking Technology</h2>
                 <ul class="specs">
                     <li><i class="fa-solid fa-building"></i>Teknikum</li>
                     <li><i class="fa-solid fa-location-dot"></i>Växjö, Sweden</li>
                     <li><i class="fa-solid fa-clock"></i>August 2020 - June 2023</li>
                 </ul>
-                <p class="feature-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
+                <p class="section-content">At Teknikum, I expanded my knowledge in regards to Windows clients along with learning how to properly use Windows Server, set up Active Directory and similar. I also learned how to setup Cisco network equipment like routers and switches. I also added a web development course to my curriculum, which helped me create my Twitter clone called Chirp, and this very website.</p>
             </div>
-            <div class="screenshot-container">
-                <img class="Screenshot" src="/assets/uploads/images/vaxjo.png">
+            <div class="photo-container">
+                <img class="photo" src="/assets/uploads/images/vaxjo.png">
                 <div class="linkCompany">
                     <a title="teknikum.se" href="https://teknikum.se"><i class="fa-solid fa-link"></i>
                 </div>
