--- a/projects/index.html
+++ b/projects/index.html
@@ -85,7 +85,7 @@
         <div class="section">
             <div>
                 <h2 class="section-title">Can we build it? ...maybe</h2>
-                <p class="section-content">This website under construction.</p>
+                <p class="section-content">This website is under construction.</p>
             </div>
             <div class="photo-container">
                 <p class="photo noBack">🏗️</p>
