--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <p class="section-content">I enjoy collecting, repairing, and modifying vintage Apple products, like iPods. I open them, repair them if needed and then modify them with larger batteries, replace the internal spinning hard drive with an SD card and also flash custom firmware on them! It's a really fun hobby and being able to tinker with them is really calming.</p>
                 <p class="section-content">I currently have a...</p>
                 <ul class="specs">
-                    <li>a 5.5th Generation iPod Video with a 5000mAh battery and 128GB SD card storage, along with a transparent click wheel and top case</li>
-                    <li>a 2nd Generation iPod Mini with a new battery and 64GB of Compact Flash storage</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 5.5th Generation iPod Video with a 5000mAh battery and 128GB SD card storage, along with a transparent click wheel and top case</li>
+                    <li><i class="fa-solid fa-mobile-screen-button"></i>a 2nd Generation iPod Mini with a new battery and 64GB of Compact Flash storage</li>
                     <li><i class="fa-solid fa-mobile-screen-button"></i>a 1st Generation iPod Touch</li>
                     <li><i class="fa-solid fa-mobile-screen-button"></i>a 3rd Generation iPod Touch</li>
                 </ul>
