--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button" class="button"><i class="fa-solid fa-rotate-right"></i>Update</button>
                     </div>
                 </div>
             </section>
@@ -230,11 +229,11 @@
                 <h2>Settings</h2>
                 <div class="modalSettings">
                     <div>
-                        <h3><i class="fa-solid fa-language"></i>Language</h3>
+                        <h3><i class="fa-solid fa-globe"></i>Language</h3>
                         <div>
                             <select name="language" id="language" class="button">
                                 <option value="en" selected>English</option>
-                                <option value="sv">Swedish</option>
+                                <option value="sv">Svenska (Swedish)</option>
                             </select>
                         </div>
                     </div>
@@ -268,11 +267,22 @@
                         </div>
                     </div>
                     <div>
-                        <h3><i class="fa-solid fa-wrench"></i>Quirks</h3>
+                        <h3><i class="fa-solid fa-wrench"></i>General</h3>
                         <div>
-                            <input type="checkbox" name="quirk" id="quirk1" value="quirk1">
-                            <label for="quirk1">Auto-update activities from Discord every second</label>
+                            <div class="checkbox-wrapper-51">
+                                <input type="checkbox" id="autoUpdateActivity" name="autoUpdateActivity"/> 
+                                <label for="autoUpdateActivity" class="toggle"> Auto update activities every second 
+                                  <span>
+                                    <svg width="10px" height="10px" viewBox="0 0 10 10">
+                                      <path d="M5,1 L5,1 C2.790861,1 1,2.790861 1,5 L1,5 C1,7.209139 2.790861,9 5,9 L5,9 C7.209139,9 9,7.209139 9,5 L9,5 C9,2.790861 7.209139,1 5,1 L5,9 L5,1 Z"></path>
+                                    </svg>
+                                  </span>
+                                </label>
+                              </div>
                         </div>
+                    </div>
+                    <div>
+                        <h3><i class="fa-solid fa-universal-access"></i>Accessibility</h3>
                     </div>
                 </div>
                 <div class="modalButtons">
