--- a/projects/index.html
+++ b/projects/index.html
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div>
-                        <h3><i class="fa-solid fa-wrench"></i>Quirks</h3>
+                        <h3><i class="fa-solid fa-wrench"></i>General</h3>
                         <div>
                             <input type="checkbox" name="quirk" id="quirk1" value="quirk1">
                             <label for="quirk1">Auto-update activities from Discord every second</label>
