--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
     <main class="container">
         <div id="info" class="withBanner">
-            <img src="/assets/uploads/images/image.png" alt="A selfie where I'm standing in a white t-shirt in front of a tree" class="icon">
+            <img src="/assets/uploads/images/image.png" alt="A selfie where I'm in a bus in a grey t-shit." class="icon">
             <div>
                 <h1 class="name">Adnan Bukvic</h1>
-                <p class="description titleColor">a swedish <span id="techEnthu">tech
+                <p class="description inverted">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
                 <p id="statusWrapper" class="dcloading">Loading</p>
