fixed color in dark mode

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="/assets/uploads/images/image.png" alt="A selfie where I'm in a bus in a grey t-shit." class="icon">
             <div>
                 <h1 class="name">Adnan Bukvic</h1>
-                <p class="description inverted">a swedish <span id="techEnthu">tech
+                <p class="description white">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
                 <p id="statusWrapper" class="dcloading">Loading</p>
