--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p class="description white">a swedish <span id="techEnthu">tech
                         enthusiast</span><span id="frontEndWebDev">front end web developer</span><span
                         id="backEndWebDev">back-end web developer</span><span id="itTech">IT-technician</span></p>
-                <p id="statusWrapper" class="dcloading">Loading</p>
+                <p id="statusWrapper" class="dcloading">Connecting</p>
             </div>
         </div>
 
